rbx_binary/src/tests/snapshots/rbx_binary__tests__util__cframe-special-cases__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: "02"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
  children: []
- referent: referent-1
  name: "03"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
          - - 0.0
            - 1.0
            - 0.0
  children: []
- referent: referent-2
  name: "05"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - -1.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
  children: []
- referent: referent-3
  name: "06"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
          - - 0.0
            - -1.0
            - 0.0
  children: []
- referent: referent-4
  name: "07"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 1.0
            - 0.0
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
  children: []
- referent: referent-5
  name: "09"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 0.0
            - 1.0
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
  children: []
- referent: referent-6
  name: 0a
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - -1.0
            - 0.0
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
  children: []
- referent: referent-7
  name: 0c
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 0.0
            - -1.0
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - -1.0
            - 0.0
  children: []
- referent: referent-8
  name: 0d
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
          - - 1.0
            - 0.0
            - 0.0
  children: []
- referent: referent-9
  name: 0e
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 0.0
            - -1.0
          - - 0.0
            - 1.0
            - 0.0
          - - 1.0
            - 0.0
            - 0.0
  children: []
- referent: referent-10
  name: "10"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - -1.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
          - - 1.0
            - 0.0
            - 0.0
  children: []
- referent: referent-11
  name: "11"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 0.0
            - 1.0
          - - 0.0
            - -1.0
            - 0.0
          - - 1.0
            - 0.0
            - 0.0
  children: []
- referent: referent-12
  name: "14"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - -1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
  children: []
- referent: referent-13
  name: "15"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - -1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
          - - 0.0
            - 1.0
            - 0.0
  children: []
- referent: referent-14
  name: "17"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - -1.0
            - 0.0
            - 0.0
          - - 0.0
            - -1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
  children: []
- referent: referent-15
  name: "18"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - -1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
          - - 0.0
            - -1.0
            - 0.0
  children: []
- referent: referent-16
  name: "19"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 1.0
            - 0.0
          - - -1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
  children: []
- referent: referent-17
  name: 1b
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 0.0
            - -1.0
          - - -1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
  children: []
- referent: referent-18
  name: 1c
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - -1.0
            - 0.0
          - - -1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
  children: []
- referent: referent-19
  name: 1e
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 0.0
            - 1.0
          - - -1.0
            - 0.0
            - 0.0
          - - 0.0
            - -1.0
            - 0.0
  children: []
- referent: referent-20
  name: 1f
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
          - - -1.0
            - 0.0
            - 0.0
  children: []
- referent: referent-21
  name: "20"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 0.0
            - 1.0
          - - 0.0
            - 1.0
            - 0.0
          - - -1.0
            - 0.0
            - 0.0
  children: []
- referent: referent-22
  name: "22"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - -1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
          - - -1.0
            - 0.0
            - 0.0
  children: []
- referent: referent-23
  name: "23"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 0.0
            - 0.0
            - -1.0
          - - 0.0
            - -1.0
            - 0.0
          - - -1.0
            - 0.0
            - 0.0
  children: []
